        made to have a security declaration on a nonexistent method.

      - OFS Application: While deprecated since years, old-style product
        metadata in the __init__.py did not show deprecation warnings. Added
        warnings and converted ZGadflyDA/__init__.py and
        ZSQLMethods/__init__.py to use registerClass instead.

    Other

      - Made 'zopectl test' work for software homes which do not have
        an "inplace" build (it used to require that test.py be in
        $ZOPE_HOME/bin/;  now it will use $ZOPE_HOME as a fallback).

      - Improved logging of ConflictErrors. All conflict errors are
        logged at INFO, with counts of how many occurred and how many
        were resolved. Tracebacks for all conflicts are logged a DEBUG
        level, although these won't help anyone much. If a conflict
        error is unresolved, it will now bubble up to error_log and
        standard_error_message.

      - Suppressed output of deprecation warning in 'filepath' test
        for PythonScripts.

  Zope 2.8.4 (2005/10/26)

    Bugs Fixed

      - Collector #1927:  Modified ZReST not to store rendered / warnings
        as persistent attributes, using volatile attributes instead as
        a cache.

      - Collector #1926: fixed a typo in _doAddUser when password
        encryption is enabled.

      - If a content object implemented any in-place numeric operators, 
        untrusted code could call them, thus modifying the content.

      - If Python 2.4 is used, despite the fact that Python 2.4 is
        unsupported, untrusted code could use generator expressions to
        gain access to container items.

  Zope 2.8.3 (2005/10/18)

    Other

      - ZSQLMethod.manage_main: Moved the error message that warns of a 
        non-existing or closed database connection next to the Connection ID
        dropdown and present it using red to increase its visibility.

      - Update to Docutils 0.3.9 (forgotten in Zope 2.8.2)
